# Daily_Report

./: .gitignore  daily_commands.txt  pyproject.toml  requirements.txt  run_daily_report.bat
docs/: forecast_notes.txt
scripts/: verify_capacity_outputs.py
src/radiology_reports/application/: manager_daily_app.py  manager_daily_yoy_app.py
src/radiology_reports/capacity/: capacity_check.py  daily_weighted_validation.py  scheduled_capacity_check.py  scheduled_capacity_check_GROK.py  test_daily_weighted_volume.py
src/radiology_reports/capacity_reporting/: capacity_models.py  cli.py  daily_capacity_usecase.py
src/radiology_reports/cli/: daily_capacity_executive_summary.py  manager_pdf.py  manager_pdf_yoy.py
src/radiology_reports/data/: capacity.py  completed.py  workload.py
src/radiology_reports/forecasting/: capacity_domain.py  capacity_models.py  cli.py  daily_capacity_forecast.py  daily_capacity_usecase.py  daily_forecast_accuracy.py  forecast.py  forecast_algorithm.py  predict_exams.py  predict_exams_with_num_rooms.py  timeseries_forecast.py
src/radiology_reports/pdf/: builder.py  chart_builder.py  styles.py  table_builder.py
src/radiology_reports/presentation/: console.py  email.py  ops_email.py
src/radiology_reports/reporting/: RP_YOY-2.py  csv_writer.py  daily.py  monthreports.py  weekreports.py  yearlyreports.py
src/radiology_reports/reporting-old/: RP_YOY.py  dailyreport.py  excel_builder.py  quarterlyreports.py
src/radiology_reports/services/: basebudget.py  budget.py  (+5 more)
tests/golden/: console_capacity.txt  ops_email.txt  scheduling_email.html
(+33 files in other folders)
